# MemoryAllocator

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
src/: AddFunction.cpp  AddFunction.h  EnviromentMacro.h  main.cpp
src/Allocators/: SequenceAllocator_prototype.cpp  SequenceAllocator_prototype.h  SequenceAllocator_prototype.inl
src/allocators/: IAllocator.cpp  IAllocator.h  SequenceAllocator.cpp  SequenceAllocator.h  StackAllocator.cpp  StackAllocator.h
src/platform/: Utils.h  Utils.inl
src/platform/unix/: Utils.cpp
tests/: AddFunction_unittest.cpp  Align_unittest.cpp  SequenceAllocator_prototype_unittest.cpp  StackAllocator_unittest.cpp  test_main.cpp
