
# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
# Static libriary to include in client project
cc_library(
    name = "MemAllocator",
    srcs = glob(
        include = [
            "src/*.cpp",
            "src/**/*.cpp",
            ],
        exclude = [
            "src/main.cpp"
        ],
    ), 
    hdrs = glob([
        "src/*.h", 
        "src/*.inl",
        "src/**/*.h", 
        "src/**/*.inl"
    ]),
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_binary
# Binary that runs examples, benchmaking, also a client
cc_binary(
    name = "MemAllocator_main",
    srcs = glob([
        "src/main.cpp"
    ]),
    deps = [
        ":MemAllocator"
    ],
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_test
# Tests
cc_test(
    name = "MemAllocator_test",
    size = "small",
    srcs = glob([
        "tests/*_unittest.cpp",
        "tests/test_main.cpp"
    ]),
    copts = [
        "-Isrc/",
        "-Ivendor/googletest/googletest/include/"
    ],
    deps = [
        "@GTest//:gtest",
        ":MemAllocator"
    ],
)